<?xml version="1.0" encoding="utf-8"?>
<!--
    The Phoenix Hospitality Management System
    Settings Installer App
    String Values XML Definition File
    Copyright (c) 2020 By Troy Marker Enterprises
    All Rights Under Copyright Reserved

    The code in this file was created for use with the Phoenix Hospitality Management System (PHMS).
    Use of this code outside the PHMS is strictly prohibited.
-->
<resources>
    <string name="app_name">Phoenix Install</string>
    <string name="app_long_name">PHOENIX HOSPITALITY MANAGEMENT SYSTEM INSTALL APP</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="company_address">COMPANY ADDRESS</string>
    <string name="company_city">COMPANY CITY</string>
    <string name="company_state">COMPANY STATE</string>
    <string name="company_zip">COMPANY ZIP</string>
    <string name="api_url">API URL</string>
    <string name="install_settings">INSTALL SETTINGS</string>
    <string name="error">ERROR: %1$s</string>
    <string name="exit_2">CLOSE</string>
    <string name="load_settings">LOAD SETTINGS</string>.
    <string name="lock_pass">LOCK PASSWORD</string>
    <string name="exit_app">EXIT APP</string>
    <string name="api_key">API Key</string>
    <string name="blank"> </string>
</resources>
